fix: validator, horizontal scroll

--- a/shelter/pad.blocks/slider-containers/slider-inner-container.css
+++ b/shelter/pad.blocks/slider-containers/slider-inner-container.css
@@ -3,7 +3,7 @@
     max-width: 36.25rem;
     gap: 2.2rem;
     overflow: hidden;
-    width: 36.25rem;
+    width: 18rem;
   }
 
   #main-page .display__pad {
